<resources>
    <string name="app_name">BloodBankAndroid</string>

    <string name="tv_main_action">What do you want to do? Donate blood, Request Blood</string>
    <string name="tv_req_blood">Request Blood</string>
    <string name="tv_don_blood">Donate Blood</string>
    <string name="tv_blood_group">Blood Group</string>
    <string name="tv_phone_num">Phone Number</string>
    <string name="tv_location">Location</string>
    <string name="tv_name">Name</string>

    <string name="btn_donate_blood">Donate Blood</string>
    <string name="btn_request_blood">Request Blood</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_show_map">Show Map</string>
    <string name="btn_post_my_request">Post my Request</string>
    <string name="btn_location">Choose location</string>

    <string name="et_hint_full_name">Full Name</string>
    <string name="et_hint_phone_number">Phone Number</string>

    <string name="tv_amount">Amount</string>

    <string name="et_amount">Pints of blood needed</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api">AIzaSyBevxdmgwJ0QgDItkUoaAdpBc7PW5tYpUQ</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>

    <string-array name="spinner_blood_group">
        <item>A +ve</item>
        <item>A -ve</item>
        <item>B +ve</item>
        <item>B -ve</item>
        <item>AB +ve</item>
        <item>AB -ve</item>
        <item>O +ve</item>
        <item>O -ve</item>
    </string-array>
    <string-array name="spinner_districts">
        <item>Achham</item>
        <item>Arghakhanchi</item>
        <item>Baglung</item>
        <item>Baitadi</item>
        <item>Bajhang</item>
        <item>Bajura</item>
        <item>Banke</item>
        <item>Bara</item>
        <item>Bardiya</item>
        <item>Bhaktapur</item>
        <item>Bhojpur</item>
        <item>Chitwan</item>
        <item>Dadeldhura</item>
        <item>Dailekh</item>
        <item>Dang</item>
        <item>Darchula</item>
        <item>Dhading</item>
        <item>Dhankuta</item>
        <item>Dhanusha</item>
        <item>Dolakha</item>
        <item>Dolpa</item>
        <item>Doti</item>
        <item>Eastern Rukum</item>
        <item>Western Rukum</item>
        <item>Gorkha</item>
        <item>Gulmi</item>
        <item>Humla</item>
        <item>Ilam</item>
        <item>Jajarkot</item>
        <item>Jhapa</item>
        <item>Jumla</item>
        <item>Kailali</item>
        <item>Kalikot</item>
        <item>Kanchanpur</item>
        <item>Kapilvastu</item>
        <item>Kaski</item>
        <item>Kathmandu</item>
        <item>Kavrepalanchok</item>
        <item>Khotang</item>
        <item>Lalitpur</item>
        <item>Lamjung</item>
        <item>Mahottari</item>
        <item>Makwanpur</item>
        <item>Manang</item>
        <item>Morang</item>
        <item>Mugu</item>
        <item>Mustang</item>
        <item>Myagdi</item>
        <item>Nawalpur</item>
        <item>Nuwakot</item>
        <item>Okhaldhunga</item>
        <item>Palpa</item>
        <item>Panchthar</item>
        <item>Parasi</item>
        <item>Parbat</item>
        <item>Parsa</item>
        <item>Pyuthan</item>
        <item>Ramechhap</item>
        <item>Rasuwa</item>
        <item>Rautahat</item>
        <item>Rolpa</item>
        <item>Rupandehi</item>
        <item>Salyan</item>
        <item>Sankhuwasabha</item>
        <item>Saptari</item>
        <item>Sarlahi</item>
        <item>Sindhuli</item>
        <item>Sindhupalchok</item>
        <item>Siraha</item>
        <item>Solukhumbu</item>
        <item>Sunsari</item>
        <item>Surkhet</item>
        <item>Syangja</item>
        <item>Tanahu</item>
        <item>Taplejung</item>
        <item>Terhathum</item>
        <item>Udayapur</item>
    </string-array>
    <string-array name="spinner_districts_all">
        <item>All Districts</item>
        <item>Achham</item>
        <item>Arghakhanchi</item>
        <item>Baglung</item>
        <item>Baitadi</item>
        <item>Bajhang</item>
        <item>Bajura</item>
        <item>Banke</item>
        <item>Bara</item>
        <item>Bardiya</item>
        <item>Bhaktapur</item>
        <item>Bhojpur</item>
        <item>Chitwan</item>
        <item>Dadeldhura</item>
        <item>Dailekh</item>
        <item>Dang</item>
        <item>Darchula</item>
        <item>Dhading</item>
        <item>Dhankuta</item>
        <item>Dhanusha</item>
        <item>Dolakha</item>
        <item>Dolpa</item>
        <item>Doti</item>
        <item>Eastern Rukum</item>
        <item>Western Rukum</item>
        <item>Gorkha</item>
        <item>Gulmi</item>
        <item>Humla</item>
        <item>Ilam</item>
        <item>Jajarkot</item>
        <item>Jhapa</item>
        <item>Jumla</item>
        <item>Kailali</item>
        <item>Kalikot</item>
        <item>Kanchanpur</item>
        <item>Kapilvastu</item>
        <item>Kaski</item>
        <item>Kathmandu</item>
        <item>Kavrepalanchok</item>
        <item>Khotang</item>
        <item>Lalitpur</item>
        <item>Lamjung</item>
        <item>Mahottari</item>
        <item>Makwanpur</item>
        <item>Manang</item>
        <item>Morang</item>
        <item>Mugu</item>
        <item>Mustang</item>
        <item>Myagdi</item>
        <item>Nawalpur</item>
        <item>Nuwakot</item>
        <item>Okhaldhunga</item>
        <item>Palpa</item>
        <item>Panchthar</item>
        <item>Parasi</item>
        <item>Parbat</item>
        <item>Parsa</item>
        <item>Pyuthan</item>
        <item>Ramechhap</item>
        <item>Rasuwa</item>
        <item>Rautahat</item>
        <item>Rolpa</item>
        <item>Rupandehi</item>
        <item>Salyan</item>
        <item>Sankhuwasabha</item>
        <item>Saptari</item>
        <item>Sarlahi</item>
        <item>Sindhuli</item>
        <item>Sindhupalchok</item>
        <item>Siraha</item>
        <item>Solukhumbu</item>
        <item>Sunsari</item>
        <item>Surkhet</item>
        <item>Syangja</item>
        <item>Tanahu</item>
        <item>Taplejung</item>
        <item>Terhathum</item>
        <item>Udayapur</item>
    </string-array>
    <string-array name="searchBloodGroup">
        <item>All</item>
        <item>A +ve</item>
        <item>A -ve</item>
        <item>B +ve</item>
        <item>B -ve</item>
        <item>AB +ve</item>
        <item>AB -ve</item>
        <item>O +ve</item>
        <item>O -ve</item>
    </string-array>

</resources>
