<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestBloodActivity">


    <Button
        android:id="@+id/btnLocation"
        android:layout_width="0dp"
        android:layout_height="41dp"

        android:layout_alignEnd="@+id/tvLocation"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="29dp"
        android:text="@string/btn_location"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLocation"
        app:layout_constraintTop_toTopOf="@+id/tvLocation" />

    <Button
        android:id="@+id/btnChooseDate"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@id/etChooseDate"
        android:layout_alignParentEnd="true"
        android:text="Choose Date"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/etChooseDate"
        app:layout_constraintStart_toStartOf="@+id/btnLocation"
        app:layout_constraintTop_toTopOf="@+id/etChooseDate" />

    <Button
        android:id="@+id/btnChooseTime"
        android:layout_width="147dp"
        android:layout_height="42dp"
        android:layout_alignEnd="@id/etChooseTime"
        android:text="Choose Time"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/etChooseTime"
        app:layout_constraintStart_toStartOf="@+id/btnChooseDate"
        app:layout_constraintTop_toTopOf="@+id/etChooseTime" />

    <Button
        android:id="@+id/btnPostRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="13dp"
        android:text="@string/btn_post_my_request"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/tvName"
        android:ems="10"
        android:hint="@string/et_hint_full_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/spinnerBloodGroup"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@id/tvAmount"
        android:ems="10"
        android:hint="@string/et_amount"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAmount"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNum"
        app:layout_constraintTop_toTopOf="@+id/tvAmount" />


    <EditText
        android:id="@+id/etPhoneNum"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@id/tvPhoneNum"
        android:ems="10"
        android:hint="@string/tv_phone_num"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneNum"
        app:layout_constraintStart_toStartOf="@+id/btnChooseTime"
        app:layout_constraintTop_toTopOf="@+id/tvPhoneNum" />

    <EditText
        android:id="@+id/etChooseTime"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@id/tvLocation"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="Choose Time"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etChooseDate"
        app:layout_constraintEnd_toEndOf="@+id/etChooseDate"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNum" />

    <EditText
        android:id="@+id/etChooseDate"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@id/etChooseTime"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Choose Date"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLocation"
        app:layout_constraintEnd_toEndOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@+id/etChooseTime" />

    <Spinner
        android:id="@+id/spinnerBloodGroup"
        android:layout_width="151dp"
        android:layout_height="37dp"
        android:layout_alignEnd="@id/tvBloodDon"
        android:entries="@array/spinner_blood_group"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="109dp"
        android:text="@string/tv_location"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPostRequest"
        app:layout_constraintEnd_toStartOf="@+id/btnLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChooseDate" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="37dp"
        android:text="@string/tv_name"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvBloodDon" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvBloodDon"
        android:layout_marginBottom="36dp"
        android:text="@string/tv_amount"
        app:layout_constraintBottom_toTopOf="@+id/tvPhoneNum"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneNum"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/tv_phone_num"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etChooseTime"
        app:layout_constraintEnd_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/tv_blood_group"
        app:layout_constraintBottom_toTopOf="@+id/tvAmount"
        app:layout_constraintEnd_toEndOf="@+id/tvAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvBloodDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="74dp"
        android:gravity="center"
        android:text="@string/tv_req_blood"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>